fix: anchors inside warning banner to be darker blue for contrast (#11)

--- a/packages/ui/src/components/banner/banner.module.css
+++ b/packages/ui/src/components/banner/banner.module.css
@@ -36,3 +36,8 @@
 .warning .children {
   color: var(--figma-color-text-onwarning);
 }
+
+/* Link component does not have enough contrast on our warning bg */
+.warning :global(a) {
+  color: #394360;
+}
